# alfs

./: .gitignore  CLAUDE.md  Makefile  README.md  etl.nf  pyproject.toml
.claude/commands/: cc-delete.md  cc-induction.md  cc-morph.md  cc-morphrel-redirect-block.md  cc-mwe.md  cc-qc.md  cc-rewrite.md  cc-spelling-variant.md  cc-trim.md
integration_tests/: fake_llm.py
integration_tests/clerk/: request_test.py
integration_tests/pipeline/: groq_batch_test.py  induction_test.py  labeling_test.py  rewrite_test.py
nextflow/: compile.nf  etl.nf  label_new.nf  plot.nf  relabel.nf  seg.nf  segment.nf  update.nf
scripts/: augment.sh  compile.sh  dataviewer.sh  etl.sh  label_new.sh  plot.sh  relabel.sh  seg.sh  segment.sh  update.sh  viewer.sh
src/alfadict/etl/: download.py  fetch_titles.py  parse_dump.py
src/alfs/: actions.py  backup.py  backup_test.py  corpus.py  corpus_test.py  encoding.py  encoding_test.py  llm_ordering.py  llm_ordering_test.py
src/alfs/anthill/: __main__.py  app.py  queue_manager.py
src/alfs/cc/: apply.py  apply_test.py  models.py  models_test.py
src/alfs/clerk/: queue.py  request.py  request_test.py  worker.py
src/alfs/data_models/: alf.py  alf_test.py  annotated_occurrence.py  blocklist.py  blocklist_test.py  change_store.py  doc.py  induction_queue.py  induction_queue_test.py  instance_log.py  mwe_queue.py  mwe_queue_test.py  mwe_skipped.py  mwe_skipped_test.py  occurrence.py  occurrence_store.py  occurrence_store_test.py  pos.py  reserved_sense_keys.py  sense_store.py  sense_store_test.py  update_target.py
src/alfs/dataviewer/: app.py
src/alfs/etl/: augment.py  corpus_test.py  dedup_test.py  download.py  merge_docs.py  ngram_cache_test.py  parse_dump.py  sources.py  stream_dump.py  stream_dump_test.py  stream_gutenberg.py  stream_hf.py
src/alfs/mwe/: compute_pmi.py  compute_pmi_test.py  contractions.py  enqueue_candidates.py  enqueue_candidates_test.py  find_occurrences.py  find_occurrences_test.py  generate_mwe_tasks.py  generate_mwe_tasks_test.py  populate_seg_data.py  populate_seg_data_test.py
src/alfs/queenant/: app.py  (+1 more)
(+95 files in other folders)
