[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfadict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "polars>=1",
    "requests>=2",
    "mwparserfromhell>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alfadict"]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["SIM108"]  # Allow if-else over ternary for readability

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["alfadict"]
