[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "flask>=3",
    "mwparserfromhell>=0.6",
    "numpy>=1",
    "ollama>=0.4",
    "polars>=1",
    "pydantic>=2",
    "pyyaml>=6",
    "spacy>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alfs"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "types-pyyaml",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["SIM108"]  # Allow if-else over ternary for readability

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["alfs"]
